# video-analytics-bot

./: .env.example  .gitignore  Dockerfile.bot  README.MD  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_12_11_1644-40e2eedd2218_init_schema.py
app/: bot.py  loader.py  nlp_sql.py  prompts.py  sql_executor.py  tg_prepare_message.py
app/core/: config.py  db.py  logging_conf.py
app/llm/: base.py  factory.py  mistral_client.py
